CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

# プロジェクト名
PROJECT(unmap C)
SET(serial "1.0.0")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
# ライブラリ
ADD_LIBRARY(unmap SHARED unmap.c crc32.c)
SET_TARGET_PROPERTIES(unmap PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS unmap LIBRARY DESTINATION lib)
INSTALL(FILES unmap.h DESTINATION include)

